--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link id="estilo" rel="stylesheet" href="css/flex_1.css">
 
     
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HX8711F9L7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HX8711F9L7');
+</script>
 
 </head>
 <body>
